syntax = "proto3";

option csharp_namespace = "GrpcAgroService";

package greet;

service AgroField {
  rpc GetInfoByName (InfoAgrofieldRequest) returns (InfoAgrofieldReply);
}

message InfoAgrofieldRequest {
  string name = 1;
}

message InfoAgrofieldReply {
	bool success = 1;
	string name = 2;
	double aria = 3;
	int32 bal = 4;
	double pH = 5;
	double gumus = 6;
	double azot = 7;
	double phosfor = 8;
	double kaliy = 9;
	double manganese = 10;
	double cobalt = 11;
	double copper = 12;
	double zinc = 13;
	double lead = 14;
	double cesium = 15;
	string strontium = 16;
}

service CsvConverter {
  rpc ConvertCsv (CsvConverterRequest) returns (CsvConverterReply);
}

message CsvConverterRequest {
  string CsvFilePath = 1;
}

message CsvConverterReply {
  bool Success = 1;
}
